// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SessionBrowser UI States > SessionBrowserEmpty renders correctly 1`] = `
" No auto-saved conversations found.
 Press q to exit
"
`;

exports[`SessionBrowser UI States > SessionBrowserError renders correctly 1`] = `
" Error: Test error message
 Press q to exit
"
`;

exports[`SessionBrowser UI States > SessionBrowserLoading renders correctly 1`] = `
" Loading sessions…
"
`;
